css/app.css
* {
    box-sizing: border-box;
}

html, body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: 'Arial', 'Helvetica', sans-srif;
}

#canvas {
    background: #0a0e3e;
}

.landing {
    position: relative;
}

.timer {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 250px;
    background: #010212;
    text-align: center;
    box-shadow: inset 0px 10px 30px -10px #000;
}

.timer-block {
    width: 200px;
    height: 250px;
    display: inline-block;
}

.timer-block .numeric {
    color: rgba(255, 255, 255, 0.15);
    height: 70px;
    line-height: 70px;
    font-size: 50px;
}

.timer-block .description {
    color: rgba(255, 255, 255, 0.2);
    text-transform: uppercase;
    letter-spacing: 6px;
    font-size: 14px;
    height: 30px;
    text-align: center;
    width: 100%;
    line-height: 30px;
}

.timer-block .binary {
    height: 150px;
    padding: 10px;
    text-align: center;
}

.binary .bin-col {
    display: inline-block;
    margin: 5px 5px 0 5px;
    width: 20px;
    text-indent: center;
}

.binary .dot {
    background: #0a0e3e;
    border-radius: 10px;
    border: 1px solid rgba(255, 255, 255, 0.3);
    display: inline-block;
    height: 10px;
    margin: 10px auto;
    width: 10px;

    transition: all 125ms ease-out;
}

.binary .dot.on {
    background: #80FF00;
    border: 1px solid #969696;
    box-shadow: 0px 0px 10px 2px #2F5E00;
}

